--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="table">
-    <div class="cell"></div>
+    <div class="cell active"></div>
     <div class="cell"></div>
     <div class="cell"></div>
     <div class="cell"></div>
