--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
     <div class="cell"></div>
   </div>
 </body>
-<script src = "./src/js/app.js"></script>
+<script src = "./dist/main.js"></script>
 </html>
